fix for 1px column overflow

--- a/client/css/layouts/projects/_projects.scss
+++ b/client/css/layouts/projects/_projects.scss
@@ -56,7 +56,8 @@ main.projects {
 		figure {
 			box-sizing: border-box;
 			display: inline-block;
-			margin-top: 1em;
+			margin-bottom: 1px;
+			margin-top: calc(1em - 1px);
 			position: relative;
 			vertical-align: top;
 			a {
